# ceres-torch-cuda

./: .gitignore  README.md  pyproject.toml
benchmarks/: run_benchmarks.py
docs/: PERFORMANCE_SUMMARY.md  TRACEABILITY.md
examples/: bicubic_interpolation.py  circle_fit.py  curve_fitting.py  evaluation_callback_example.py  hello_world.py  hello_world_analytic_diff.py  hello_world_numeric_diff.py  iteration_callback_example.py  more_garbow_hillstrom.py  nist.py  pose_graph_2d.py  powell.py  robot_pose_mle.py  robust_curve_fitting.py  rosenbrock.py  rosenbrock_analytic_diff.py  rosenbrock_numeric_diff.py  sampled_function.py  simple_bundle_adjuster.py  tiny_bundle_adjustment.py
native/cuda/: ceres_torch_cuda.cpp  ceres_torch_cuda_kernel.cu
src/ceres_torch/: __init__.py  benchmarking.py  callbacks.py  covariance.py  cuda_backends.py  gradient_solver.py  interpolation.py  line_search.py  linear.py  losses.py  manifolds.py  problem.py  rotation.py  schur.py  solver.py  sparse_backends.py  testing.py  tiny_solver.py  types.py
src/torch_ceres/: __init__.py  callbacks.py  costs.py  covariance.py  gradient_solver.py  linear.py  losses.py  manifolds.py  ordered_groups.py  problem.py  rotation.py  schur.py  testing.py  tiny_solver.py
tests/: test_benchmarking.py  test_covariance_interpolation.py  test_cuda_extensions.py  test_cuda_smoke.py  test_examples.py  test_golden_validation.py  test_linear_schur.py  test_losses.py  test_manifolds_rotation.py  test_optional_backends.py  test_problem_api.py  test_problem_solver.py  test_tiny_solver.py
