[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ceres-torch"
version = "0.1.0"
description = "A Pythonic PyTorch implementation of Ceres Solver concepts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "ceres-torch contributors" }]
dependencies = ["torch>=2.2"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
sparse = ["scipy>=1.10"]
cuda = ["ninja>=1.11"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "performance: opt-in benchmark/performance gates; enable with CERES_TORCH_RUN_BENCHMARKS=1",
  "native_extension: opt-in native CUDA extension build tests; enable with CERES_TORCH_BUILD_CUDA_EXTENSIONS=1",
]
